--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <link rel=preconnect href="https://wow.zamimg.com/">
     <script type="module" src="/src/main.tsx"></script>
     <script defer src="/wowheadtooltips.js" ></script>
   </body>
