title and temp logo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Keys</title>
+    <meta
+      name="description"
+      content="Threechest helps you plan your World of Warcraft Mythic+ routes. Fully compatible with MDT. NPC and spell data for all dungeons. Save your routes, shared them with friends and browse others'."
+    />
+    <title>Threechest</title>
   </head>
   <body>
     <div id="root"></div>
