--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       content="Threechest helps you plan your World of Warcraft Mythic+ routes. Fully compatible with MDT. NPC and spell data for all dungeons. Save your routes, shared them with friends and browse others'."
     />
     <title>Threechest</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZFWC5SP1E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VZFWC5SP1E');
+    </script>
   </head>
   <body>
     <div id="root"></div>
