--- a/index.html
+++ b/index.html
@@ -2,26 +2,18 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/images/favicon.png">
+    <link rel="icon" href="/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta
       name="description"
       content="Threechest helps you plan your World of Warcraft Mythic+ routes. Fully compatible with MDT. NPC and spell data for all dungeons. Save your routes, shared them with friends and browse others'."
     />
     <title>Threechest</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZFWC5SP1E"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-VZFWC5SP1E');
-    </script>
   </head>
   <body>
     <div id="root"></div>
-    <link rel=preconnect href="https://wow.zamimg.com/">
+    <link rel="preconnect" href="https://wow.zamimg.com/" />
     <script type="module" src="/src/main.tsx"></script>
-    <script defer src="/wowheadtooltips.js" ></script>
+    <script defer src="/wowheadtooltips.js"></script>
   </body>
 </html>
