--- a/index.html
+++ b/index.html
@@ -15,5 +15,15 @@
     <link rel="preconnect" href="https://wow.zamimg.com/" />
     <script type="module" src="/src/main.tsx"></script>
     <script defer src="/wowheadtooltips.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZFWC5SP1E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-VZFWC5SP1E')
+    </script>
   </body>
 </html>
